Fix networking by exporting modules when needed
Ever since Java 9, stuff has moved to the modules system and this means old versions might try to access stuff that is no longer on the "default" module.
Adding opens/exports allows us to work around that.